Vi jobber alltid ut i fra at det finnes et cluster

--- a/roles/etcd/templates/etcd.service.j2
+++ b/roles/etcd/templates/etcd.service.j2
@@ -19,7 +19,7 @@ ExecStart={{ install_dir }}/bin/etcd --name {{ ansible_hostname }} \
   --advertise-client-urls https://{{ local_ip }}:2379 \
   --initial-cluster-token {{ cluster_name }}-etcd \
   --initial-cluster {{all_etcd|join(',')}} \
-  --initial-cluster-state new \
+  --initial-cluster-state existing \
   --client-cert-auth \
   --trusted-ca-file=/etc/ssl/etcd/ca.pem \
   --cert-file=/etc/ssl/etcd/client.pem \
