--- a/roles/etcd/templates/etcd.service.j2
+++ b/roles/etcd/templates/etcd.service.j2
@@ -5,12 +5,13 @@
   {% set shortname = hostvars[host]['ansible_hostname'] -%}
   {% set _ = all_etcd.append("%s=http://%s:2380" % (shortname, other_ip)) -%}
 {% endfor -%}
-{% for host in groups['etcd_coreos'] -%}
-  {% set other_ip = hostvars[host]['ansible_default_ipv4']['address'] -%}
-  {% set shortname = hostvars[host]['ansible_hostname'] -%}
-  {% set _ = all_etcd.append("%s=http://%s:2380" % (shortname, other_ip)) -%}
-{% endfor -%}
-
+{% if 'etcd_coreos' in groups -%}
+  {% for host in groups['etcd_coreos'] -%}
+    {% set other_ip = hostvars[host]['ansible_default_ipv4']['address'] -%}
+    {% set shortname = hostvars[host]['ansible_hostname'] -%}
+    {% set _ = all_etcd.append("%s=http://%s:2380" % (shortname, other_ip)) -%}
+  {% endfor -%}
+{% endif -%}
 [Unit]
 Description=etcd
 Documentation=https://coreos.com/etcd/
