Remove http from entrypoints

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -50,7 +50,7 @@ metadata:
   namespace: kube-system
 data:
   traefik.toml: |
-    defaultEntryPoints = ["http","https"]
+    defaultEntryPoints = ["https"]
 
     [traefikLog]
     format = "json"
