--- a/templates/worker-kubelet.service.j2
+++ b/templates/worker-kubelet.service.j2
@@ -4,7 +4,23 @@ Documentation=http://kubernetes.io/docs/
 
 [Service]
 Environment=HOME=/root
-ExecStart={{ install_dir}}/bin/kubelet --hostname-override {{ inventory_hostname }} --node-labels=nais.io/type=worker --cluster-dns={{ cluster_dns_ip }} --cluster-domain={{ cluster_domain }} --image-pull-progress-deadline=10m --anonymous-auth=false --client-ca-file=/etc/kubernetes/pki/ca.pem --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf --cadvisor-port 0 --runtime-cgroups=/systemd/system.slice --kubelet-cgroups=/systemd/system.slice --allow-privileged=true --v={{ log_level | default(0) }} --image-gc-high-threshold 80 --image-gc-low-threshold 40 --volume-plugin-dir={{ volume_plugin_dir }}
+ExecStart={{ install_dir}}/bin/kubelet \
+  --hostname-override {{ inventory_hostname }} \
+  --node-labels=nais.io/type=worker \
+  --cluster-dns={{ cluster_dns_ip }} \
+  --cluster-domain={{ cluster_domain }} \
+  --image-pull-progress-deadline=10m \
+  --anonymous-auth=false \
+  --client-ca-file=/etc/kubernetes/pki/ca.pem \
+  --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf \
+  --cadvisor-port 0 \
+  --runtime-cgroups=/systemd/system.slice \
+  --kubelet-cgroups=/systemd/system.slice \
+  --allow-privileged=true \
+  --v={{ log_level | default(0) }} \
+  --image-gc-high-threshold 80 \
+  --image-gc-low-threshold 40 \
+  --volume-plugin-dir={{ volume_plugin_dir }}
 Restart=always
 StartLimitInterval=0
 RestartSec=10
