--- a/templates/addons/core-dns.yaml.j2
+++ b/templates/addons/core-dns.yaml.j2
@@ -48,7 +48,9 @@ data:
   Corefile: |
     .:53 {
         errors
-        log . "{remote} - [{when}] \"{type} {class} {name} {proto} {size} {>do} {>bufsize}\" {rcode} {rsize} {duration}"
+        log . {
+            class error
+        }
         health
         kubernetes {{ cluster_domain }} {{ service_cidr }} {
             upstream
@@ -81,8 +83,7 @@ spec:
       annotations:
         scheduler.alpha.kubernetes.io/critical-pod: ''
         scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
-        nais.io/logformat: accesslog_with_processing_time,glog
-        nais.io/logtransform: dns_loglevel
+        nais.io/logformat: coredns
         prometheus.io/scrape: "true"
         prometheus.io/port: "9153"
     spec:
