--- a/templates/kubeconfigs/kube-proxy.conf.j2
+++ b/templates/kubeconfigs/kube-proxy.conf.j2
@@ -3,7 +3,7 @@ kind: Config
 clusters:
 - cluster:
     certificate-authority: /etc/kubernetes/pki/ca.pem
-    server: https://{{ groups['masters'][0] }}:6443
+    server: https://{{ groups.masters|random }}:6443
   name: kubernetes
 contexts:
 - context:
@@ -14,5 +14,5 @@ current-context: kube-proxy@kubernetes
 users:
 - name: kube-proxy
   user:
-    client-certificate: /etc/kubernetes/pki/admin.pem
-    client-key: /etc/kubernetes/pki/admin-key.pem
+    client-certificate: /etc/kubernetes/pki/kube-proxy.pem
+    client-key: /etc/kubernetes/pki/kube-proxy-key.pem
