Snodig feil med kube-apiserver Gir oss unhealthy cluster via , selv om  sier healthy

--- a/templates/manifests/kube-apiserver.yaml.j2
+++ b/templates/manifests/kube-apiserver.yaml.j2
@@ -1,7 +1,6 @@
 {% set etcd_urls = [] -%}
 {% for host in groups['etcd'] -%}
-  {% set ip = hostvars[host]['ansible_default_ipv4']['address'] -%}
-  {% set _ = etcd_urls.append("https://%s:2379" % (ip)) -%}
+  {% set _ = etcd_urls.append("https://%s:2379" % (host)) -%}
 {% endfor -%}
 {% set worker_ips = [] -%}
 {% for host in groups['workers'] -%}
