Glemte if, i if-sjekken min

--- a/roles/coreos_bootstrap/templates/bashrc.j2
+++ b/roles/coreos_bootstrap/templates/bashrc.j2
@@ -23,7 +23,7 @@ alias k='kubectl'
 alias ks='kubectl --namespace kube-system'
 alias kn='kubectl --namespace nais'
 
-{% ansible_hostname in groups.etcd -%}
+{% if ansible_hostname in groups.etcd -%}
 export ETCDCTL_CERT_FILE=/etc/ssl/etcd/etcd.pem
 export ETCDCTL_KEY_FILE=/etc/ssl/etcd/etcd-key.pem
 export ETCDCTL_CA_FILE=/etc/ssl/etcd/ca.pem
