--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -127,10 +127,10 @@ spec:
         resources:
           limits:
             cpu: 400m
-            memory: 512Mi
+            memory: 1Gi
           requests:
             cpu: 200m
-            memory: 512Mi
+            memory: 1Gi
         ports:
         - containerPort: 443
           hostPort: 443
