use image digest

--- a/templates/addons/debug.yaml.j2
+++ b/templates/addons/debug.yaml.j2
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
       - name: debug
-        image: oyvindio/debug
+        image: oyvindio/debug@sha256:e5861330dd71e22e57494d75f70a2cdb0567b17a0950fd7dec87836dde2e9ff6
