--- a/templates/master-kubelet.service.j2
+++ b/templates/master-kubelet.service.j2
@@ -3,7 +3,8 @@ Description=kubelet: The Kubernetes Node Agent
 Documentation=http://kubernetes.io/docs/
 
 [Service]
-Environment=HOME=/root
+Environment="TZ=UTC"
+Environment="HOME=/root"
 ExecStart={{ install_dir }}/bin/kubelet \
   --hostname-override {{ inventory_hostname }} \
   --node-labels=nais.io/type=master \
