use timezone utc for kube-proxy

--- a/templates/kube-proxy.service.j2
+++ b/templates/kube-proxy.service.j2
@@ -3,6 +3,7 @@ Description=Kubernetes Kube Proxy
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
 
 [Service]
+Environment="TZ=UTC"
 ExecStart={{ install_dir }}/bin/kube-proxy \
   --cluster-cidr={{ pod_network_cidr }} \
   --masquerade-all=true \
