Change to dictionary for vsphere vars.

--- a/templates/manifests/kube-apiserver.yaml.j2
+++ b/templates/manifests/kube-apiserver.yaml.j2
@@ -53,7 +53,7 @@ spec:
     - --etcd-cafile=/etc/kubernetes/pki/ca.pem
     - --etcd-certfile=/etc/kubernetes/pki/etcd-client.pem
     - --etcd-keyfile=/etc/kubernetes/pki/etcd-client-key.pem
-{% if vsphere_datastore is defined and vsphere_datacenter is defined and vsphere_network is defined and vsphere_resourcepool is defined %}
+{% if vsphere is defined %}
     - --cloud-provider=vsphere
     - --cloud-config=/etc/kubernetes/vsphere.conf
 {% endif %}
