--- a/templates/master-kubelet.service.j2
+++ b/templates/master-kubelet.service.j2
@@ -16,7 +16,7 @@ ExecStart={{ install_dir }}/bin/kubelet \
   --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf \
   --runtime-cgroups=/systemd/system.slice \
   --kubelet-cgroups=/systemd/system.slice \
-{% if vsphere_datastore is defined and vsphere_datacenter is defined and vsphere_network is defined and vsphere_resourcepool is defined %}
+{% if vsphere is defined %}
   --cloud-provider=vsphere \
   --cloud-config=/etc/kubernetes/vsphere.conf \
 {% endif %}
