--- a/templates/addons/core-dns.yaml.j2
+++ b/templates/addons/core-dns.yaml.j2
@@ -4,7 +4,7 @@ metadata:
   name: coredns
   namespace: kube-system
 ---
-apiVersion: rbac.authorization.k8s.io/v1
+apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
   labels:
@@ -22,7 +22,7 @@ rules:
   - list
   - watch
 ---
-apiVersion: rbac.authorization.k8s.io/v1
+apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
   annotations:
@@ -62,7 +62,7 @@ data:
         prometheus 0.0.0.0:9153
     }
 ---
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: coredns
@@ -76,47 +76,33 @@ spec:
   selector:
     matchLabels:
       k8s-app: coredns
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
   template:
     metadata:
       labels:
         k8s-app: coredns
       annotations:
-        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
+        scheduler.alpha.kubernetes.io/critical-pod: ''
+        scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
         nais.io/logformat: coredns
         prometheus.io/scrape: "true"
         prometheus.io/port: "9153"
     spec:
-      priorityClassName: system-cluster-critical
-      tolerations:
-        - key: "CriticalAddonsOnly"
-          operator: "Exists"
       affinity: # never schedule coredns on a node that is already running one
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
           - topologyKey: kubernetes.io/hostname
-            labelSelector:
-              matchLabels:
+            labelSelector:                               
+              matchLabels:                               
                 k8s-app: coredns
       serviceAccountName: coredns
       containers:
       - name: coredns
         image: coredns/coredns:{{ coredns_version }}
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         args: [ "-conf", "/etc/coredns/Corefile" ]
-        resources:
-          limits:
-            memory: 170Mi
-          requests:
-            cpu: 100m
-            memory: 70Mi
         volumeMounts:
         - name: config-volume
           mountPath: /etc/coredns
-          readOnly: true
         ports:
         - containerPort: 53
           name: dns
@@ -136,14 +122,6 @@ spec:
           timeoutSeconds: 5
           successThreshold: 1
           failureThreshold: 5
-        securityContext:
-          allowPrivilegeEscalation: false
-          capabilities:
-            add:
-            - NET_BIND_SERVICE
-            drop:
-            - all
-          readOnlyRootFilesystem: true
       dnsPolicy: Default
       volumes:
         - name: config-volume
