Add metro vCenter

--- a/templates/vsphere.conf.j2
+++ b/templates/vsphere.conf.j2
@@ -5,6 +5,8 @@ port="443"
 insecure-flag="1"
 datacenters="{{ vsphere['datacenter'] }}"
 
+[VirtualCenter "10.1.19.40"]
+
 [VirtualCenter "10.1.19.41"]
 
 [VirtualCenter "10.1.19.42"]
