--- a/templates/master-kubelet.service.j2
+++ b/templates/master-kubelet.service.j2
@@ -16,6 +16,10 @@ ExecStart={{ install_dir }}/bin/kubelet \
   --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf \
   --runtime-cgroups=/systemd/system.slice \
   --kubelet-cgroups=/systemd/system.slice \
+{% if vsphere is defined %}
+  --cloud-provider=vsphere \
+  --cloud-config=/etc/kubernetes/vsphere.conf \
+{% endif %}
   --volume-plugin-dir={{ volume_plugin_dir }}
 Restart=always
 StartLimitInterval=0
