--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -76,7 +76,7 @@ data:
             "Cookie" = "redact"
             "Password" = "redact"
             "Set-Cookie" = "redact"
-            "X-Caller-Is-Gsak = "redact"
+            "X-Caller-Is-Gsak" = "redact"
 
     [entryPoints]
       [entryPoints.https]
