--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -77,6 +77,7 @@ data:
             "Password" = "redact"
             "Set-Cookie" = "redact"
             "X-Caller-Is-Gsak" = "redact"
+            "Nav-Consumer-Token" = "redact"
 
     [entryPoints]
       [entryPoints.https]
