Set dns servers in coredns config

--- a/templates/addons/core-dns.yaml.j2
+++ b/templates/addons/core-dns.yaml.j2
@@ -55,7 +55,7 @@ data:
         kubernetes {{ cluster_domain }} {{ service_cidr }} {
             upstream
         }
-        proxy . /etc/resolv.conf {
+        forward . {{ nameservers }} {
             max_fails 0
         }
         cache 30
