--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -129,10 +129,10 @@ spec:
         resources:
           limits:
             cpu: 400m
-            memory: 2Gi
+            memory: 2400Mi
           requests:
             cpu: 200m
-            memory: 2Gi
+            memory: 2400Mi
         ports:
         - containerPort: 443
           hostPort: 443
