max 1 unavailable pod during rolling update

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -105,6 +105,9 @@ spec:
       k8s-app: traefik-ingress-lb
   strategy:
     type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 1
   replicas: {{ traefik_replicas }}
   template:
     metadata:
