Add ping port to deployment spec

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -152,6 +152,9 @@ spec:
         - containerPort: 443
           hostPort: 443
           name: ingress
+        - containerPort: 8000
+          hostPort: 8000
+          name: ping
         - containerPort: 8080
           hostPort: 8080
           name: metrics
