--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -95,6 +95,8 @@ data:
         entryPoint = "traefik"
     [ping]
     entryPoint = "ping"
+    [lifeCycle]
+    requestAcceptGraceTimeout = "10s"
 ---
 kind: Deployment
 apiVersion: apps/v1
