--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -88,9 +88,15 @@ data:
           KeyFile = "/tls/tls.key"
       [entryPoints.traefik]
       address = ":8080"
+      [entryPoints.ping]
+      address = ":8000"
     [metrics]
       [metrics.prometheus]
         entryPoint = "traefik"
+    [ping]
+    entryPoint = "ping"
+    [lifeCycle]
+    requestAcceptGraceTimeout = "10s"
 ---
 kind: Deployment
 apiVersion: apps/v1
@@ -148,6 +154,9 @@ spec:
         - containerPort: 443
           hostPort: 443
           name: ingress
+        - containerPort: 8000
+          hostPort: 8000
+          name: ping
         - containerPort: 8080
           hostPort: 8080
           name: metrics
