use short hostname for kubelet

--- a/roles/create_certificates/templates/kubelet-csr.json.j2
+++ b/roles/create_certificates/templates/kubelet-csr.json.j2
@@ -1,5 +1,5 @@
 {
-  "CN": "system:node:{{ item }}",
+  "CN": "system:node:{{ item.split('.')[0] }}",
   "names": [{
     "O": "system:nodes"
   }],
