--- a/templates/worker-kubelet.service.j2
+++ b/templates/worker-kubelet.service.j2
@@ -6,7 +6,7 @@ Documentation=http://kubernetes.io/docs/
 Environment="TZ=UTC"
 Environment="HOME=/root"
 ExecStart={{ install_dir }}/bin/kubelet \
-  --hostname-override {{ inventory_hostname }} \
+  --hostname-override {{ inventory_hostname.split('.')[0] }} \
   --node-labels=nais.io/type=worker \
   --cluster-dns={{ cluster_dns_ip }} \
   --cluster-domain={{ cluster_domain }} \
