--- a/templates/manifests/kube-apiserver.yaml.j2
+++ b/templates/manifests/kube-apiserver.yaml.j2
@@ -54,6 +54,11 @@ spec:
     - --etcd-certfile=/etc/kubernetes/pki/etcd-client.pem
     - --etcd-keyfile=/etc/kubernetes/pki/etcd-client-key.pem
     - --requestheader-client-ca-file=/etc/kubernetes/pki/front-proxy-ca.pem
+    - --proxy-client-cert-file=/etc/kubernetes/pki/front-proxy-client.pem
+    - --proxy-client-key-file=/etc/kubernetes/pki/front-proxy-client-key.pem
+    - --requestheader-extra-headers-prefix=X-Remote-Extra-
+    - --requestheader-group-headers=X-Remote-Group
+    - --requestheader-username-headers=X-Remote-User
 {% if vsphere is defined %}
     - --cloud-provider=vsphere
     - --cloud-config=/etc/kubernetes/vsphere.conf
