--- a/templates/kubeconfigs/kubelet-worker-config.yaml.j2
+++ b/templates/kubeconfigs/kubelet-worker-config.yaml.j2
@@ -1,6 +1,6 @@
 apiVersion: kubelet.config.k8s.io/v1beta1
 kind: KubeletConfiguration 
-clusterDNS: "{{ cluster_dns_ip }}"
+clusterDNS: ["{{ cluster_dns_ip }}"]
 clusterDomain: "{{ cluster_domain }}"
 authentication:
   anonymous:
