Bruk nummer, ikke streng

--- a/templates/kubeconfigs/kubelet-worker-config.yaml.j2
+++ b/templates/kubeconfigs/kubelet-worker-config.yaml.j2
@@ -8,5 +8,5 @@ authentication:
     enabled: false
   x509:
     clientCAFile: "/etc/kubernetes/pki/ca.pem"
-imageGCHighThresholdPercent: "80"
-imageGCLowThresholdPercent: "40"
+imageGCHighThresholdPercent: 80
+imageGCLowThresholdPercent: 40
