allow-privileged er ikke deprecated for apiserver

--- a/templates/manifests/kube-apiserver.yaml.j2
+++ b/templates/manifests/kube-apiserver.yaml.j2
@@ -22,6 +22,7 @@ spec:
   containers:
   - command:
     - kube-apiserver
+    - --allow-privileged=true
     - --audit-policy-file=/etc/kubernetes/kube-apiserver-audit-policy.yaml
     - --audit-log-path=-
     - --audit-log-format=json
