--- a/templates/manifests/kube-controller-manager.yaml.j2
+++ b/templates/manifests/kube-controller-manager.yaml.j2
@@ -18,7 +18,7 @@ spec:
     - --root-ca-file=/etc/kubernetes/pki/ca.pem
     - --service-account-private-key-file=/etc/kubernetes/pki/sa.key
     - --cluster-signing-cert-file=/etc/kubernetes/pki/ca.pem
-    - --address=127.0.0.1
+    - --bind-address=127.0.0.1
     - --controllers=*,bootstrapsigner,tokencleaner
     - --cluster-signing-key-file=/etc/kubernetes/pki/ca-key.pem
     - --leader-elect=true
