--- a/templates/kube-apiserver-audit-policy.yaml.j2
+++ b/templates/kube-apiserver-audit-policy.yaml.j2
@@ -6,6 +6,7 @@ rules:
       - '/healthz*'
       - /version
       - '/swagger*'
+      - '/openapi/*'
   - level: None
     resources:
       - group: ""
