--- a/templates/master-kubelet.service.j2
+++ b/templates/master-kubelet.service.j2
@@ -13,7 +13,6 @@ ExecStart={{ install_dir }}/bin/kubelet \
   --v={{ log_level|default(2) }} \
   --register-with-taints=node.alpha.kubernetes.io/ismaster=:NoSchedule \
   --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf \
-  --runtime-cgroups=/systemd/system.slice \
 {% if vsphere is defined %}
   --cloud-provider=vsphere \
   --cloud-config=/etc/kubernetes/vsphere.conf \
@@ -22,6 +21,8 @@ ExecStart={{ install_dir }}/bin/kubelet \
 Restart=always
 StartLimitInterval=0
 RestartSec=10
+CPUAccounting=true
+MemoryAccounting=true
 
 [Install]
 WantedBy=multi-user.target
