extensions/v1beta1 er deprecated, bruk apps/v1

--- a/templates/addons/core-dns.yaml.j2
+++ b/templates/addons/core-dns.yaml.j2
@@ -62,7 +62,7 @@ data:
         prometheus 0.0.0.0:9153
     }
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: coredns
